perf: Optimize arena memory management via object pooling and binary search